# dataquality-platform

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.swarm/: learnings.md  project.yaml  scripts
api/: __init__.py  config.py  dependencies.py  main.py
connectors/: __init__.py  adls_gen2.py  base.py  bigquery.py  delta_table.py  glue_catalog.py  mysql.py  postgresql.py  redshift.py  s3.py  sql_server.py  sqlite.py
dashboard/: package.json
docs/: 01-research.md  02-requirements.md  03-architecture.md  04-implementation.md  05-test-report.md  06-project-overview.md  architect-output.json  po-output.json  researcher-output.json
engine/: __init__.py  report_generator.py  report_sections.py  report_styles.py  report_uploader.py  rule_engine.py
infra/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
reports/: combined_report.html  corrupted_report.html  customers_report.html  orders_report.html  products_report.html
rules/: example_rules.yaml
scripts/: create_test_db.py  generate_test_data.py  run_full_pipeline.py  run_test_suite.py  seed_database.py  setup_local.sh  upload_test_data.py
spark/: __init__.py  dq_job.py  submit.py
tests/: conftest.py  test_api_rules.py  test_api_sources.py  test_bigquery.py  test_connectors.py  test_connectors_aws.py  test_connectors_mysql.py  test_connectors_postgres.py  test_dimensions.py  test_generate_data.py  test_health.py  test_job_execution.py  test_profiling.py  test_report_generator.py  test_report_uploader.py  test_rule_engine.py  test_sqlite_connector.py  (+1 more)
(+77 files in other folders)
